week36/ingress/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-deployment
spec:
    replicas: 2
    selector:
        matchLabels:
            app: apache
    template:
        metadata:
            labels:
                app: apache
        spec:
            containers:
                - name: apache
                  image: httpd:2.4
                  ports:
                      - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
    name: frontend-service
spec:
    selector:
        app: apache
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    type: ClusterIP
