week36/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: web-apps-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
        - host: week36.asxcode.com
          http:
              paths:
                  - path: /backend
                    pathType: Prefix
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 80
                  - path: /frontend
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend-service
                            port:
                                number: 80
